cabal-version:       2.2
name:                test-Cabal-build
version:             0.1.0
synopsis:            test-Cabal-build project
description:
        Testing Cabal 3.10 continuing to build after error
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2024  Jens Petersen <juhpetersen@gmail.com>
category:            Unclassified
homepage:            https://github.com/juhp/test-Cabal-build
bug-reports:         https://github.com/juhp/test-Cabal-build/issues
build-type:          Simple
extra-doc-files:     README.md

source-repository head
  type:                git
  location:            https://github.com/juhp/test-Cabal-build.git

executable test-Cabal-build
  main-is:             Main.hs
  other-modules:       MyLib
                       MyLib2
                       MyLib3
                       MyLib4
  hs-source-dirs:      src
  build-depends:       base < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
